# ximea_ros2_cam

./: CMakeLists.txt  README.md  package.xml
config/: nir_config.yaml  rgb_config.yaml  xiCam_config.yaml
docs/: parameters.md
include/ximea_ros2_cam/: ximea_ros2_cam.hpp
launch/: xiCam.launch.xml
msg/: XiImageInfo.msg
src/: ximea_ros2_cam.cpp  ximea_ros2_cam_node.cpp
